--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "1-service",
+	"name": "tasksphere",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -57,6 +57,7 @@
 		"winston": "^3.7.2"
 	},
 	"devDependencies": {
+		"@swc/core": "^1.3.72",
 		"@types/app-root-path": "^1.2.4",
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
@@ -78,18 +79,19 @@
 		"husky": "^8.0.1",
 		"prettier": "^2.7.1",
 		"regenerator-runtime": "^0.13.9",
+		"ts-node": "^10.9.1",
 		"tsconfig-paths": "^4.0.0",
 		"typescript": "^4.7.4"
 	},
 	"scripts": {
-		"pm2:start": "npm run build:clean && pm2 start npm --name=\"EnverX BE\" -- start",
-		"pm2:restart": "pm2 restart \"EnverX BE\"",
-		"pm2:delete": "pm2 delete \"EnverX BE\"",
+		"pm2:start": "npm run build:clean && pm2 start npm --name=\"tasksphere BE\" -- start",
+		"pm2:restart": "pm2 restart \"tasksphere BE\"",
+		"pm2:delete": "pm2 delete \"tasksphere BE\"",
 		"build:clean": "rimraf build && npx tsc",
 		"preserve": "npm run build",
-		"dev": "cross-env NODE_ENV=development nodemon -r tsconfig-paths/register src/app.ts",
+		"dev": "cross-env NODE_ENV=development nodemon -r tsconfig-paths/register src/bin/www.ts",
 		"restart": "npm run build",
-		"oder-svc": "npm run set:env && cross-env node -r module-alias/register build/src/app.js",
+		"oder-svc": "npm run set:env && cross-env node -r module-alias/register build/src/bin/www.js",
 		"start": "concurrently \"npm run oder-svc\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"exec": "node -r tsconfig-paths/register build/src/app.js",
