--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "semi": [2, "never"],
     "quotes": [2, "single", "avoid-escape"],
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
