--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"sequelize": "^6.21.1",
 		"sequelize-typescript": "^2.1.3",
 		"sqs-consumer": "^5.7.0",
+		"swc": "^1.0.11",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.4",
 		"ua-parser-js": "^1.0.32",
@@ -57,7 +58,7 @@
 		"winston": "^3.7.2"
 	},
 	"devDependencies": {
-		"@swc/core": "^1.3.72",
+		"@swc/core": "^1.3.74",
 		"@types/app-root-path": "^1.2.4",
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
