--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/moment": "^2.13.0",
 		"@types/morgan": "^1.9.4",
 		"@types/node-cron": "^3.0.6",
+		"@types/prettier": "^3.0.0",
 		"@types/ua-parser-js": "^0.7.36",
 		"@types/uuid": "^8.3.4",
 		"app-root-path": "^3.0.0",
@@ -78,7 +79,7 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^8.0.1",
-		"prettier": "^2.7.1",
+		"prettier": "^2.8.8",
 		"regenerator-runtime": "^0.13.9",
 		"ts-node": "^10.9.1",
 		"tsconfig-paths": "^4.0.0",
