--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,18 +5,15 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": "warn",
-    "@typescript-eslint/no-explicit-any": 0,
+    "no-console": 1,
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "semi": [2, "never"],
     "quotes": [2, "single", "avoid-escape"],
     "prettier/prettier": "error",
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "no-useless-catch": "off",
-    "@typescript-eslint/no-non-null-asserted-optional-chain": "off"
+    "eqeqeq": 0
   }
 }
