--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "semi": [2, "never"],
     "quotes": [2, "single", "avoid-escape"],
     "prettier/prettier": "error",
-    "eqeqeq": 0
+    "eqeqeq": 0,
+    "no-useless-catch": 0
   }
 }
